Fix overflow

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     flex-direction: column;
     align-items: center;
     background-color: #e8f1f3;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 footer{
